pkg/front_end/testcases/redirecting_initializer_arguments_test.dart.strong.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/redirecting_initializer_arguments_test.dart:12:46: Error: The argument type 'String' can't be assigned to the parameter type 'T'.
// Try changing the type of the parameter, or casting the argument to 'T'.
//   Foo.from(String _init) : this._internal(x: _init);
//                                              ^
//
import self as self;
import "dart:core" as core;

class Foo<T extends core::Object = dynamic> extends core::Object {
  generic-covariant-impl field self::Foo::T x;
  constructor from(core::String _init) → self::Foo<self::Foo::T>
    : this self::Foo::_internal(x: let final<BottomType> #t1 = invalid-expression "pkg/front_end/testcases/redirecting_initializer_arguments_test.dart:12:46: Error: The argument type 'String' can't be assigned to the parameter type 'T'.
Try changing the type of the parameter, or casting the argument to 'T'.
  Foo.from(String _init) : this._internal(x: _init);
                                             ^" in _init as{TypeError} <BottomType>)
    ;
  constructor _internal({self::Foo::T x = null}) → self::Foo<self::Foo::T>
    : self::Foo::x = x, super core::Object::•()
    ;
}
static method main() → void {}
